@@ -1,3 +1,7 @@
+2003-11-04  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/Makefile: added 'test' target.
+
 2003-11-03  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tclIOUtil.c
